--- a/force-app/main/default/lwc/accountFinder/accountFinder.html
+++ b/force-app/main/default/lwc/accountFinder/accountFinder.html
@@ -17,4 +17,9 @@
         label="reset"
         onclick={reset}>
     </lightning-button>
+    <template lwc:if={accounts.data}>
+        <template for:each={accounts.data} for:item="account">
+             <p key={account.Id}>{account.Name}</p>
+        </template>
+    </template>
 </template>
