--- a/force-app/main/default/lwc/contactList/contactList.html
+++ b/force-app/main/default/lwc/contactList/contactList.html
@@ -15,5 +15,9 @@
             >
            </lightning-datatable>
         </template>
+
+        <template if:true={errors}>
+            <p>{errors}</p>
+        </template>
     </lightning-card>
 </template>
